--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,8 @@ autoscan-*.log
 aclocal.m4
 compile
 config.h.in
+config.log  
+config.status
 configure
 configure.scan
 depcomp
@@ -59,3 +61,4 @@ Makefile
 cmake_install.cmake
 install_manifest.txt
 
+bin/*
