--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,6 @@
 AUTOMAKE_OPTIONS=foreign
 bin_PROGRAMS=daemon
 daemon_SOURCES=daemon-main.c
-AM_CFLAGS = ${libcurl_CFLAGS}
-daemon_LDADD = ${libcurl_LIBS}
+
+AM_CFLAGS =  `i686-w64-mingw32.static-pkg-config --cflags libcurl` 
+AM_LDFLAGS = `i686-w64-mingw32.static-pkg-config --libs libcurl`
